# MolecularDynamicsPipeline

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
config/: example_simulation.yaml  fastfolder_preproduction.yaml  fastfolders_production.yaml  misato_parameters.yaml  plinder_parameters.yaml  plinder_parameters_bound.yaml  plinder_parameters_metadynamics.yaml  plinder_parameters_unbound.yaml  simulation_parameters.yaml  tomek_parameters_bound.yaml
scripts/: fix_autodock_molecules.py  generate_mc_misato_unbound.py  run_simulation.py  run_single_misato_simulation.py  run_single_plinder_simulation.py
scripts/fastfolders/: fastfolders_array.sbatch  prepare_to_production.py  run_preproduction_simulation.py  run_production_simulation.py  submit_fastfolders_array.sh
scripts/misato_scripts/: generate_mc_misato_unbound.py  run_single_misato_simulation.py
scripts/plinder_scripts/: SLURM_USAGE.md  example_plinder_ids.txt  plinder_array.sbatch  run_plinder_metadynamics.py  run_single_plinder.sh  run_single_plinder_simulation.py  submit_plinder_array.sh  submit_plinder_jobs.sh  validate_status.py
scripts/plinder_scripts/filters/: train_plinder.yaml
scripts/tomek_scripts/: run_single_tomek.sh  run_single_tomek_simulation.py  submit_all.sh
scripts/tomek_scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  tomek_energies-checkpoint.ipynb
src/dynamics_pipeline/data/: biomolecules.py  misato.py  plinder.py  small_molecule.py
src/dynamics_pipeline/simulation/: metadynamics.py  reporters.py  simulation.py  simulation_refactored.py
src/dynamics_pipeline/utils/: errors.py  logger.py  preprocessing.py
src/molecular_dynamics_pipeline/data/: biomolecules.py  misato.py  plinder.py  small_molecule.py
src/molecular_dynamics_pipeline/energy/: energy.py
src/molecular_dynamics_pipeline/simulation/: metadynamics.py  reporters.py  simulation.py  simulation_refactored.py
src/molecular_dynamics_pipeline/utils/: errors.py
