[project]
name = "moleculardynamicspipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biotite==1.2.0",
    "black>=25.12.0",
    "cachetools>=6.2.4",
    "flake8>=7.3.0",
    "importlib-resources>=6.5.2",
    "jinja2>=3.1.6",
    "notebook>=7.5.2",
    "numpy<2",
    "openbabel-wheel>=3.1.1.22",
    "openff-toolkit",
    "openmm>=8.4.0.post2",
    "openmmforcefields",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pdb2pqr>=3.7.1",
    "pdbfixer",
    "plinder>=0.2.25",
    "plotly>=6.5.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.0",
    "rdkit>=2022.9.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
openmmforcefields = { git = "https://github.com/openmm/openmmforcefields.git" }
openff-toolkit = { git = "https://github.com/openforcefield/openff-toolkit.git" }
pdbfixer = { git = "https://github.com/openmm/pdbfixer.git" }
